--- a/test/hardstuck_condi_zerker.htm
+++ b/test/hardstuck_condi_zerker.htm
@@ -5,23 +5,7 @@
 <script src="../out/SkillsProcessor.js"></script>
 <script src="../out/TUtilsV2.js"></script>
 <script src="../out/TooltipsV2.js" defer></script>
-<style>
-	.tooltipWrapper {
-		position: absolute;
-		top: 0;
-		left: 0;
-		max-width: 95%;
-		background-color: gray;
-		border: black;
-		display: block;
-		flex-direction: column;
-		pointer-events: none;  /* important */
-	}
-	.tooltipWrapper>.tooltip {
-		display: flex;
-		flex-direction: column;
-	}
-</style>
+<link rel="stylesheet" href="./tooltips.css" />
 <head>
 </head>
 <body class="gw2_builds-template-default single single-gw2_builds postid-19944 webp-support">
@@ -36,12 +20,6 @@
 <h1 class="gw2-color-warrior-light">Condizerker <div><span class="balance-patch updated" data-label="patch">May 2023 <i class="icon icon-checkmark"></i></span></div>
 </h1>
 
-<div class="build-details-bar">
-<div class="build-details-filters">
-<span class="difficulty-select build-flag" data-label="difficulty">
-<input type="range" min="0" max="5" name="d" value="2" id="difficulty-select" autocomplete="off" disabled="disabled"><label class="state-remove" for="difficulty-select">Select difficulty</label>
-</span><div class="build-flag" id="flag-gw2gametype" data-label="Game type"> PvP</div> <div class="build-flag" id="flag-gw2buildrole" data-label="Role"> Sidenoder</div> </div>
-<div class="flexbox-fill"></div> </div>
 </header>
 <div class="build-variant variant variant-is-active initial-variant variant-sword ">
 <div class="full-width-section-small gw2-build content-highlight gamemode-pvp">
