added tooltips for stunbreaks, prefixbuffbrief, fixed buffs display

--- a/test/hardstuck_condi_zerker.htm
+++ b/test/hardstuck_condi_zerker.htm
@@ -18,6 +18,7 @@
 	})
 </script>
 <link rel="stylesheet" href="./tooltips.css" />
+<link rel="stylesheet" href="./tooltips.min.css" />
 <head>
 </head>
 <body class="gw2_builds-template-default single single-gw2_builds postid-19944 webp-support">
