--- a/test/hardstuck_condi_zerker.htm
+++ b/test/hardstuck_condi_zerker.htm
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" style="scroll-behavior: smooth;" lang="en-US">
-<script src="../out/HSAPI.js"></script>
-<script src="../out/SkillsProcessor.js"></script>
-<script src="../out/TUtilsV2.js"></script>
-<script src="../out/APICache.js"></script>
-<script src="../out/TooltipsV2.js" defer></script>
+<script src="../out/tooltips.js" defer></script>
 
 <script src="./output.skills.js"></script>
 <script src="./output.traits.js"></script>
