some more styling, new test page for ammo

--- a/test/hardstuck_condi_zerker.htm
+++ b/test/hardstuck_condi_zerker.htm
@@ -197,4 +197,5 @@ Lastly, use <gw2object tabindex="-1" class="gw2-color-warrior-light noembed gw2o
 </article>
 </main>
 </div>
-
+</body>
+</html>
