moved style out out dir. well probably want to replace it with something compiled some day

--- a/test/Open world Bladesworn Build (Open World) - Hardstuck.htm
+++ b/test/Open world Bladesworn Build (Open World) - Hardstuck.htm
@@ -17,7 +17,7 @@
 		gw2tooltips.hookDocument(document)
 	})
 </script>
-<link rel="stylesheet" href="./tooltips.css" />
+<link rel="stylesheet" href="../out/tooltips.css" />
 </head>
 
 <body class="gw2_builds-template-default single single-gw2_builds postid-13759 logged-in admin-bar no-customize-support">
