--- a/test/hardstuck_condi_zerker.htm
+++ b/test/hardstuck_condi_zerker.htm
@@ -13,7 +13,7 @@
 		gw2tooltips.hookDocument(document)
 	})
 </script>
-<link rel="stylesheet" href="./tooltips.css" />
+<link rel="stylesheet" href="../out/tooltips.css" />
 <link rel="stylesheet" href="./tooltips.min.css" />
 <head>
 </head>
