- adding text to inline embeds - various style adjustments i didnt think of for the inline stuff

--- a/test/hardstuck_condi_zerker.htm
+++ b/test/hardstuck_condi_zerker.htm
@@ -18,7 +18,6 @@
 <head>
 </head>
 <body class="gw2_builds-template-default single single-gw2_builds postid-19944 webp-support">
-<script data-cfasync="false" data-no-defer="1">if(typeof ewww_webp_supported==="undefined"){var ewww_webp_supported=!1}if(ewww_webp_supported){document.body.classList.add("webp-support")}</script>
 
 
 <div id="content">
@@ -54,8 +53,7 @@
 <gw2object tabindex="-1" type="trait" objid="1375" class="skeleton trait_major trait_unselected noembed"></gw2object>
 <gw2object tabindex="-1" type="trait" objid="1649" class="skeleton trait_major  noembed"></gw2object>
 <gw2object tabindex="-1" type="trait" objid="1708" class="skeleton trait_major trait_unselected noembed"></gw2object>
-</div>
-</gw2object>
+</div></gw2object>
 <gw2object class="specialization noembed" objid="51" selected_traits="1,2,2" type="specialization">
 <gw2object tabindex="-1" type="trait" objid="1415" class="trait_minor noembed"></gw2object>
 <div class="traitwrapper">
@@ -74,8 +72,7 @@
 <gw2object tabindex="-1" type="trait" objid="1369" class="skeleton trait_major trait_unselected noembed"></gw2object>
 <gw2object tabindex="-1" type="trait" objid="1317" class="skeleton trait_major trait_unselected noembed"></gw2object>
 <gw2object tabindex="-1" type="trait" objid="1657" class="skeleton trait_major  noembed"></gw2object>
-</div>
-</gw2object>
+</div></gw2object>
 <gw2object class="specialization noembed" objid="18" selected_traits="2,2,2" type="specialization">
 <gw2object tabindex="-1" type="trait" objid="1831" class="trait_minor noembed cycler" title="Right-click to cycle through tooltips"></gw2object>
 <div class="traitwrapper">
@@ -94,8 +91,7 @@
 <gw2object tabindex="-1" type="trait" objid="1928" class="skeleton trait_major trait_unselected noembed"></gw2object>
 <gw2object tabindex="-1" type="trait" objid="2038" class="skeleton trait_major trait_unselected noembed"></gw2object>
 <gw2object tabindex="-1" type="trait" objid="2043" class="skeleton trait_major  noembed"></gw2object>
-</div>
-</gw2object>
+</div></gw2object>
 </div>
 </div>
 <div class="horizontal-scroll-item item armors-weapons">
