- set pvp build tests into pvp mode(lol) - removed some props from Skill land Trait interface that got moved into facts - updated datasource to be compliant with new structure

--- a/test/hardstuck_condi_zerker.htm
+++ b/test/hardstuck_condi_zerker.htm
@@ -8,6 +8,9 @@
 	var GW2TooltipsConfig = {
 		autoInitialize: false,
 	}
+	var GW2TooltipsContext = {
+		gameMode: 'Pvp',
+	}
 	window.addEventListener('load', () => {
 		APICache.apiImpl = new FakeAPI();
 		gw2tooltips.hookDocument(document)
