--- a/test/Power Reaper Build (PvP) - Hardstuck.htm
+++ b/test/Power Reaper Build (PvP) - Hardstuck.htm
@@ -10,6 +10,9 @@
 	var GW2TooltipsConfig = {
 		autoInitialize: false,
 	}
+	var GW2TooltipsContext = {
+		gameMode: 'Pvp',
+	}
 	window.addEventListener('load', () => {
 		APICache.apiImpl = new FakeAPI();
 		gw2tooltips.hookDocument(document)
