first iteration of the items api filter plural forms with gw2text2html
this breaks items for now, but thats mostly because of missing data. client-side is mostly there

might want to swap over to facts later on

--- a/test/hardstuck_condi_zerker.htm
+++ b/test/hardstuck_condi_zerker.htm
@@ -4,6 +4,7 @@
 
 <script src="./output.skills.js"></script>
 <script src="./output.traits.js"></script>
+<script src="./output.items.js"></script>
 <script>
 	var GW2TooltipsConfig = {
 		autoInitialize: false,
