--- a/test/Open world Bladesworn Build (Open World) - Hardstuck.htm
+++ b/test/Open world Bladesworn Build (Open World) - Hardstuck.htm
@@ -8,6 +8,7 @@
 
 <script src="./output.skills.js"></script>
 <script src="./output.traits.js"></script>
+<script src="./output.items.js"></script>
 <script>
 	var GW2TooltipsConfig = {
 		autoInitialize: false,
