- added option for automatic stat set adjustment on items that use the wrong stat set - added tags to all console logging

--- a/test/Power Reaper Build (PvP) - Hardstuck.htm
+++ b/test/Power Reaper Build (PvP) - Hardstuck.htm
@@ -7,6 +7,7 @@
 <script src="./output.skills.js"></script>
 <script src="./output.traits.js"></script>
 <script src="./output.items.js"></script>
+<script src="./output.itemstats.js"></script>
 <script>
 	var GW2TooltipsConfig = {
 		autoInitialize: false,
