--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -19,11 +19,15 @@
 	})
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
-<link rel="stylesheet" href="./tooltips.min.css" />
 <head>
 </head>
 <body class="gw2_builds-template-default single single-gw2_builds postid-19944 webp-support">
+	<h1>Bloodbound weapons</h1>
 	<gw2object objid="77458" type="item" stats="161"></gw2object>
 	<gw2object objid="77352" type="item" stats="161"></gw2object>
+	<h1>Vendor value / item count </h1>
+	<gw2object objid="46816" type="item" stats="161"></gw2object>
+	<gw2object objid="46736" type="item" count="5"></gw2object>
+	<gw2object class="gw2objectembed" objid="46736" type="item" count="5"></gw2object>
 </body>
 </html>
