added rune collection and equipped amount highliting

--- a/test/Open world Bladesworn Build (Open World) - Hardstuck.htm
+++ b/test/Open world Bladesworn Build (Open World) - Hardstuck.htm
@@ -16,7 +16,7 @@
 	}
 	window.addEventListener('load', () => {
 		APICache.apiImpl = new FakeAPI();
-		gw2tooltips.hookDocument(document)
+		gw2tooltips.hookDocument(document).then(_ => { Collect.allRuneCounts(gw2tooltips.context, document) })
 	})
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
