--- a/test/Power Reaper Build (PvP) - Hardstuck.htm
+++ b/test/Power Reaper Build (PvP) - Hardstuck.htm
@@ -10,15 +10,11 @@
 <script src="./output.itemstats.js"></script>
 <script>
 	var GW2TooltipsConfig = {
-		autoInitialize: false,
+		apiImpl: () => new FakeAPI(),
 	}
 	var GW2TooltipsContext = {
 		gameMode: 'Pvp',
 	}
-	window.addEventListener('load', () => {
-		APICache.apiImpl = new FakeAPI();
-		gw2tooltips.hookDocument(document)
-	})
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
 </head>
