--- a/test/Power Reaper Build (PvP) - Hardstuck.htm
+++ b/test/Power Reaper Build (PvP) - Hardstuck.htm
@@ -11,9 +11,15 @@
 <script>
 	var GW2TooltipsConfig = {
 		apiImpl: () => new FakeAPI(),
+		autoCollectRuneCounts: false,
 	}
 	var GW2TooltipsContext = {
 		gameMode: 'Pvp',
+		character: {
+			runeCounts: {
+				21175: 6, //TOOD(Rennorb): improve auto collection so this isn't needed
+			}
+		}
 	}
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
