fixt tt max size issues that caused weird positioning behavior in some cases

--- a/test/Heal Alacrity Mechanist Build (Group PvE) - Hardstuck.htm
+++ b/test/Heal Alacrity Mechanist Build (Group PvE) - Hardstuck.htm
@@ -11,9 +11,6 @@
 	var GW2TooltipsConfig = {
 		apiImpl: () => new FakeAPI(),
 	}
-	var GW2TooltipsContext = {
-		gameMode: 'Pvp',
-	}
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
 </head>
@@ -52,7 +49,7 @@
 <gw2object tabindex="-1" type="trait" objid="1871" mode="40" class="skeleton trait_major trait_unselected noembed"></gw2object>
 <gw2object tabindex="-1" type="trait" objid="1854" mode="40" class="skeleton trait_major trait_unselected noembed"></gw2object>
 </div></gw2object>
-<gw2object class="specialization noembed" data-label="Inventions" mode="40" objid="47" selected_traits="0,1,2" type="specialization">
+<gw2object class="specialization noembed" mode="40" objid="47" selected_traits="0,1,2" type="specialization">
 <gw2object tabindex="-1" type="trait" objid="518" mode="40" class="trait_minor noembed"></gw2object>
 <div class="traitwrapper">
 <gw2object tabindex="-1" type="trait" objid="394" mode="40" class="skeleton trait_major  noembed"></gw2object>
