--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -10,20 +10,24 @@
 	var GW2TooltipsConfig = {
 		apiImpl: () => new FakeAPI(),
 	}
-	var GW2TooltipsContext = {
-		gameMode: 'Pvp',
-	}
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
 <head>
 </head>
 <body class="gw2_builds-template-default single single-gw2_builds postid-19944 webp-support">
 	<h1>Bloodbound weapons</h1>
+	<p>These are special because they use player level scaling instead of item level scaling</p>
 	<gw2object objid="77458" type="item" stats="161"></gw2object>
 	<gw2object objid="77352" type="item" stats="161"></gw2object>
 	<h1>Vendor value / item count </h1>
 	<gw2object objid="46816" type="item" stats="161"></gw2object>
 	<gw2object objid="46736" type="item" count="5"></gw2object>
 	<gw2object class="gw2objectembed" objid="46736" type="item" count="5"></gw2object>
+	<h1>Weird skills</h1>
+	<gw2object objid="10236" type="skill"></gw2object>
+	with trait:
+	<gw2object objid="10236" type="skill" with-traits="752"></gw2object>
+	<p>This should display all buffs and not loose its duration increase with the trait.</p>
+	<p>Loosing the duration might actually be a bug in game.</p>
 </body>
 </html>
