cleaning up fact processing

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -27,6 +27,7 @@
 	<gw2object objid="10236" type="skill"></gw2object>
 	with trait:
 	<gw2object objid="10236" type="skill" with-traits="752"></gw2object>
+	<p>The base version should not have distort.</p>
 	<p>This should display all buffs and not loose its duration increase with the trait.</p>
 	<p>Loosing the duration might actually be a bug in game.</p>
 </body>
