more cleanup and added prefixedbuff facts

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -47,7 +47,7 @@
 	<p>Clamping duration to one.</p>	
 	</p><gw2object objid="11929" type="skill" with-traits="2255"></gw2object>
 	<p>Modifiers can skip other modifiers, see: Vigor.</p>
-	</p><gw2object objid="43638" type="skill" with-traits="2255"></gw2object>
-	<p>PrefixedBuff and Buff in one skill.</p>	
+	</p><gw2object objid="43638" type="skill"></gw2object>
+	<p>PrefixedBuff and Buff in one skill.</p>
 </body>
 </html>
