--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -20,6 +20,7 @@
 	}
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
+<style> gw2object:not(.gw2objectembed) { width: 64px; height: 64px; } </style>
 <head>
 </head>
 <body class="gw2_builds-template-default single single-gw2_builds postid-19944 webp-support">
@@ -53,5 +54,8 @@
 
 	<gw2object objid="43638" type="skill"></gw2object>
 	<p>PrefixedBuff and Buff in one skill.</p>
+
+	<gw2object objid="816" type="trait"></gw2object>
+	<p>Stack numbers on prefix buff should be on the buf icon, not the prefix icon.</p>
 </body>
 </html>
