handle modifier fractions using the formatfraction flag

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -57,5 +57,8 @@
 
 	<gw2object objid="816" type="trait"></gw2object>
 	<p>Stack numbers on prefix buff should be on the buf icon, not the prefix icon.</p>
+
+	<gw2object objid="26730" type="skill"></gw2object>
+	<p>Showcasing how the lack of FormatFraction causes modifiers to be rounded down. Torment damage should be 95.</p>
 </body>
 </html>
