--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -60,5 +60,20 @@
 
 	<gw2object objid="26730" type="skill"></gw2object>
 	<p>Showcasing how the lack of FormatFraction causes modifiers to be rounded down. Torment damage should be 95.</p>
+
+	<gw2object objid="43937" type="skill"></gw2object>
+	<p>PercentDamage fact type</p>
+
+	<gw2object objid="54870" type="skill"></gw2object>
+	<p>PercentLifeForceAdjust fact type</p>
+
+	<gw2object objid="10214" type="skill"></gw2object>
+	<p>PercentHealth fact type</p>
+
+	<gw2object objid="33583" type="skill"></gw2object>
+	<p>HealthAdjustHealing fact type + multi hit count. Healing should be 4500.</p>
+
+	<gw2object objid="2220" type="trait"></gw2object>
+	<p>BuffConversion fact type</p>
 </body>
 </html>
