updated data + more facts tests

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -75,5 +75,18 @@
 
 	<gw2object objid="2220" type="trait"></gw2object>
 	<p>BuffConversion fact type</p>
+	
+	<gw2object objid="30520" type="skill"></gw2object>
+	<gw2object objid="16344" type="skill"></gw2object>
+	<p>Evade facts can be generated from the skills animation or be hardcoded. Both skills should have an evade fact. </p>
+	
+	<gw2object objid="25476" type="skill"></gw2object>
+	<gw2object objid="5937" type="skill"></gw2object>
+	<p>Unblockable facts can be generated from a flag or be hardcoded. Both skills should have an unblockable fact. </p>
+
+	<gw2object objid="63597" type="skill"></gw2object>
+	<p>Abilities can have their range hidden.</p>
+
+	<gw2object objid="12917" type="skill"></gw2object>
 </body>
 </html>
