added more costs to the header. all facts now have icons + removed default icon. more tests

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -87,6 +87,19 @@
 	<gw2object objid="63597" type="skill"></gw2object>
 	<p>Abilities can have their range hidden.</p>
 
-	<gw2object objid="12917" type="skill"></gw2object>
+	<gw2object objid="13015" type="skill"></gw2object>
+	<p>Skills whos activation time is rounded to zero do not have their activation time displayed. This only applies if preferCorrectnessOverExtraInfo is true.</p>
+
+	<gw2object objid="45773" type="skill"></gw2object>
+	<p>Testing the order of multiple costs.</p>
+
+	<gw2object objid="54953" type="skill"></gw2object>
+	<p>Wvw supply cost.</p>
+
+	<gw2object objid="11930" type="skill"></gw2object>
+	<p>Endurance cost.</p>
+
+	<gw2object objid="23194" type="skill"></gw2object>
+	<p>Gracefully handle legacy facts without descriptions. The second facts text may change between builds as it falls back to the first matching fact type.</p>
 </body>
 </html>
