swapping over to rollup and es module syntax
Tthis commit changes as litte als possible for now to not completely destroy git
more cleanup will follow soon.

Output is now only available as minified version with maps (could add another output without terser but i dont quite see the point).

The resulting file still works the same way but with better name isolation.
This also results in the `apiImpl` settings function now having to take the apis 'module' as an argument as FakeAPI is no longer available globally.

All of this will allow further improvements in code splitting between files while not polluting the global scope while also preserving the structure of the output file. Also automatic minification is nice.

In theory we can now also use scss, but that might be overkill.

--- a/test/Open world Bladesworn Build (Open World) - Hardstuck.htm
+++ b/test/Open world Bladesworn Build (Open World) - Hardstuck.htm
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="../out/tooltips.js" defer></script>
+<script src="../out/tooltips.min.js" defer></script>
 
 <script src="./output.skills.js"></script>
 <script src="./output.traits.js"></script>
@@ -12,7 +12,7 @@
 <script src="./output.itemstats.js"></script>
 <script>
 	var GW2TooltipsConfig = {
-		apiImpl: () => new FakeAPI(),
+		apiImpl: (APIs) => new APIs.FakeAPI(),
 	}
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
