--- a/test/Heal Alacrity Mechanist Build (Group PvE) - Hardstuck.htm
+++ b/test/Heal Alacrity Mechanist Build (Group PvE) - Hardstuck.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en-US">
 <head>
-<script src="../out/tooltips.js" defer></script>
+<script src="../out/tooltips.min.js" defer></script>
 
 <script src="./output.skills.js"></script>
 <script src="./output.traits.js"></script>
@@ -9,7 +9,7 @@
 <script src="./output.itemstats.js"></script>
 <script>
 	var GW2TooltipsConfig = {
-		apiImpl: () => new FakeAPI(),
+		apiImpl: (APIs) => new APIs.FakeAPI(),
 	}
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
