--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -101,5 +101,10 @@
 
 	<gw2object objid="23194" type="skill"></gw2object>
 	<p>Gracefully handle legacy facts without descriptions. The second facts text may change between builds as it falls back to the first matching fact type.</p>
+
+	<gw2object objid="28830" type="skill"></gw2object>
+	<gw2object objid="31700" type="skill"></gw2object>
+	<gw2object objid="30520" type="skill"></gw2object>
+	<p>Removes x facts or similar should not show defiance damage.</p>
 </body>
 </html>
