properly render gamemode splits

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -106,5 +106,8 @@
 	<gw2object objid="31700" type="skill"></gw2object>
 	<gw2object objid="30520" type="skill"></gw2object>
 	<p>Removes x facts or similar should not show defiance damage.</p>
+
+	<gw2object objid="10709" type="skill" with-traits="801"></gw2object>
+	<p>Name replacement. This skill should be called 'Devouring Darkness' (not 'Feast of Corruption').<p>
 </body>
 </html>
