initial draft for replacing skills with traited versions

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -107,6 +107,7 @@
 	<gw2object objid="30520" type="skill"></gw2object>
 	<p>Removes x facts or similar should not show defiance damage.</p>
 
+	<gw2object objid="10709" type="skill"></gw2object> with trait: 
 	<gw2object objid="10709" type="skill" with-traits="801"></gw2object>
 	<p>Name replacement. This skill should be called 'Devouring Darkness' (not 'Feast of Corruption').<p>
 </body>
