added more effect translations

--- a/test/Heal Scourge Build (Group PvE) - Hardstuck.htm
+++ b/test/Heal Scourge Build (Group PvE) - Hardstuck.htm
@@ -231,7 +231,7 @@
 <p>The downstate pull from <gw2object class="gw2-color-necromancer-light noembed gw2objectembed" objid="778" type="trait"></gw2object> can potentially affect the same targets twice over its duration. There is a 5-second internal cooldown on teleporting a downed ally. You can use this to keep grouping up downed allies in situations where players are downed far apart from each other or if the group is totally crumbling.</p>
 <p>The biggest mistake you can make is dying yourself. Know how to survive!</p>
 <ul>
-<li><gw2object class="inline-skeleton gw2objectembed" objid="10563" type="skill"><img width="32" height="32" class="skeleton" />[skill 10563]</gw2object> is a very strong self-heal on a short cooldown</li>
+<li><gw2object class="inline-skeleton gw2objectembed" objid="10563" type="skill"></gw2object> is a very strong self-heal on a short cooldown</li>
 <li><gw2object class="gw2-color-necromancer-light noembed gw2objectembed" objid="54870" type="skill"></gw2object> initially applies a large barrier to yourself</li>
 <li><gw2object class="gw2-color-necromancer-light noembed gw2objectembed" objid="783" type="trait"></gw2object> generates a lot of sustain while attacking, especially when hitting multiple targets</li>
 <li><gw2object class="gw2-color-necromancer-light noembed gw2objectembed" objid="10527" type="skill"></gw2object> and <gw2object class="gw2-color-necromancer-light noembed gw2objectembed" objid="780" type="trait"></gw2object> significantly heal you when activating and have an area pulse healing effect</li>
