- added item salvage types - we can now use an actual api.
The new data acquisition order for tests is local api > global objects > > synthesize > error.

I'll probably remove the global objects at some point, but for now they are a convenient way to work on the renderer without an api.
MAybe ill also go the other route and add back an exporter to the api.

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -110,5 +110,10 @@
 	<gw2object objid="10709" type="skill"></gw2object> with trait: 
 	<gw2object objid="10709" type="skill" with-traits="801"></gw2object>
 	<p>Name replacement. This skill should be called 'Devouring Darkness' (not 'Feast of Corruption').<p>
+
+	<gw2object objid="79745" type="item"></gw2object>
+	<gw2object objid="24615" type="item"></gw2object>
+	<gw2object objid="81227" type="item"></gw2object>
+	<p>Salvage. Should be 'Ascended', 'Standard, Research' and none in that order.<p>
 </body>
 </html>
