added (hopefully all remaining) effect translations
ref #18

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -111,5 +111,46 @@
 	<gw2object objid="24615" type="item"></gw2object>
 	<gw2object objid="81227" type="item"></gw2object>
 	<p>Salvage. Should be 'Ascended', 'Standard, Research' and none in that order.<p>
+
+	<gw2object type="effect" class="gw2objectembed" objid="aegis"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="alacrity"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="fury"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="might"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="protection"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="quickness"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="regeneration"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="resistance"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="resolution"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="stability"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="swiftness"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="vigor"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="revealed"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="stealth"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="superspeed"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="bleeding"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="burning"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="confusion"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="poison"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="torment"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="blinded"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="chilled"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="crippled"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="fear"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="immobilize"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="slow"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="taunt"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="weakness"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="vulnerability"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="daze"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="stun"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="knockdown"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="pull"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="knockback"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="launch"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="float"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="sink"></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="unblockable"></gw2object>
+	
+	<p>Effects are translated individually.</p>
 </body>
 </html>
