--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -112,6 +112,7 @@
 	<gw2object objid="81227" type="item"></gw2object>
 	<p>Salvage. Should be 'Ascended', 'Standard, Research' and none in that order.<p>
 
+	<gw2object type="effect" class="gw2objectembed" objid="agony"></gw2object>
 	<gw2object type="effect" class="gw2objectembed" objid="aegis"></gw2object>
 	<gw2object type="effect" class="gw2objectembed" objid="alacrity"></gw2object>
 	<gw2object type="effect" class="gw2objectembed" objid="fury"></gw2object>
