--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -36,6 +36,9 @@
 	<p>This should display all buffs and not loose its duration increase with the trait.</p>
 	<p>Loosing the duration might actually be a bug in game.</p>
 
+	<gw2object objid="69389" type="skill"></gw2object>
+	<p>gw2assets doesn't have an icon for this one?</p>
+
 	<gw2object objid="14518" type="skill" with-traits="1453"></gw2object>
 	<p>Demonstrates how multiple modifiers can be added together if they do not overwrite each other. There should not be multiples of any fact.</p>
 
