added test for #7 (empty text processing)
this is something  that mostly needs to happen on the api side

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -154,7 +154,9 @@
 	<gw2object type="effect" class="gw2objectembed" objid="float"></gw2object>
 	<gw2object type="effect" class="gw2objectembed" objid="sink"></gw2object>
 	<gw2object type="effect" class="gw2objectembed" objid="unblockable"></gw2object>
-	
 	<p>Effects are translated individually.</p>
+
+	<gw2object type="trait" objid="2096"></gw2object>
+	<p>Empty text processing. The trait should have a description.</p>
 </body>
 </html>
