tests for toggle skills

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -158,5 +158,11 @@
 
 	<gw2object type="trait" objid="2096"></gw2object>
 	<p>Empty text processing. The trait should have a description.</p>
+
+	<gw2object type="skill" objid="10213"></gw2object>
+	<gw2object type="skill" objid="10204"></gw2object>
+	<gw2object type="skill" objid="10543"></gw2object>
+	<gw2object type="skill" objid="42259"></gw2object>
+	<p>Toggle skills.</p>
 </body>
 </html>
