Change auto transform traited skills to be local attribute instead of global config
fixes #10

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -107,7 +107,7 @@
 	<p>Removes x facts or similar should not show defiance damage.</p>
 
 	<gw2object objid="10709" type="skill"></gw2object> with trait: 
-	<gw2object objid="10709" type="skill" with-traits="801"></gw2object>
+	<gw2object class="auto-transform" objid="10709" type="skill" with-traits="801"></gw2object>
 	<p>Name replacement. This skill should be called 'Devouring Darkness' (not 'Feast of Corruption').<p>
 
 	<gw2object objid="79745" type="item"></gw2object>
