added skill icons to chains / toggle skills

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -163,6 +163,7 @@
 	<gw2object type="skill" objid="10204"></gw2object>
 	<gw2object type="skill" objid="10543"></gw2object>
 	<gw2object type="skill" objid="42259"></gw2object>
+	this one should not have a toggle skill: <gw2object type="skill" objid="5692"></gw2object>
 	<p>Toggle skills.</p>
 </body>
 </html>
