redering of related skills on items (used for relics for now)

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -165,5 +165,59 @@
 	<gw2object type="skill" objid="42259"></gw2object>
 	this one should not have a toggle skill: <gw2object type="skill" objid="5692"></gw2object>
 	<p>Toggle skills.</p>
+
+	<gw2object type="item" objid="100794"></gw2object>
+	<gw2object type="item" objid="100429"></gw2object>
+	<gw2object type="item" objid="100148"></gw2object>
+	<gw2object type="item" objid="99965"></gw2object>
+	<gw2object type="item" objid="100659"></gw2object>
+	<gw2object type="item" objid="100388"></gw2object>
+	<gw2object type="item" objid="100453"></gw2object>
+	<gw2object type="item" objid="100455"></gw2object>
+	<gw2object type="item" objid="100450"></gw2object>
+	<gw2object type="item" objid="100385"></gw2object>
+	<gw2object type="item" objid="100177"></gw2object>
+	<gw2object type="item" objid="100614"></gw2object>
+	<gw2object type="item" objid="100411"></gw2object>
+	<gw2object type="item" objid="100144"></gw2object>
+	<gw2object type="item" objid="100916"></gw2object>
+	<gw2object type="item" objid="100693"></gw2object>
+	<gw2object type="item" objid="100153"></gw2object>
+	<gw2object type="item" objid="100849"></gw2object>
+	<gw2object type="item" objid="100580"></gw2object>
+	<gw2object type="item" objid="100752"></gw2object>
+	<gw2object type="item" objid="100924"></gw2object>
+	<gw2object type="item" objid="100527"></gw2object>
+	<gw2object type="item" objid="100345"></gw2object>
+	<gw2object type="item" objid="100219"></gw2object>
+	<gw2object type="item" objid="99997"></gw2object>
+	<gw2object type="item" objid="100893"></gw2object>
+	<gw2object type="item" objid="100432"></gw2object>
+	<gw2object type="item" objid="100579"></gw2object>
+	<gw2object type="item" objid="100442"></gw2object>
+	<gw2object type="item" objid="100400"></gw2object>
+	<gw2object type="item" objid="100739"></gw2object>
+	<gw2object type="item" objid="100542"></gw2object>
+	<gw2object type="item" objid="100368"></gw2object>
+	<gw2object type="item" objid="100461"></gw2object>
+	<gw2object type="item" objid="100947"></gw2object>
+	<gw2object type="item" objid="100448"></gw2object>
+	<gw2object type="item" objid="100775"></gw2object>
+	<gw2object type="item" objid="100561"></gw2object>
+	<gw2object type="item" objid="100942"></gw2object>
+	<gw2object type="item" objid="100390"></gw2object>
+	<gw2object type="item" objid="100048"></gw2object>
+	<gw2object type="item" objid="100194"></gw2object>
+	<gw2object type="item" objid="100090"></gw2object>
+	<gw2object type="item" objid="100230"></gw2object>
+	<gw2object type="item" objid="100694"></gw2object>
+	<gw2object type="item" objid="100625"></gw2object>
+	<gw2object type="item" objid="100934"></gw2object>
+	<gw2object type="item" objid="100158"></gw2object>
+	<gw2object type="item" objid="100557"></gw2object>
+	<gw2object type="item" objid="100031"></gw2object>
+	<gw2object type="item" objid="100074"></gw2object>
+	<gw2object type="item" objid="100115"></gw2object>
+	<p>relics</p>
 </body>
 </html>
