draft for split facts

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -219,5 +219,43 @@
 	<gw2object type="item" objid="100074"></gw2object>
 	<gw2object type="item" objid="100115"></gw2object>
 	<p>relics</p>
+
+	<gw2object type="skill" objid="26821"></gw2object>
+	<gw2object type="skill" objid="27025"></gw2object>
+	<gw2object type="skill" objid="27356"></gw2object>
+	<gw2object type="skill" objid="27715"></gw2object>
+	<gw2object type="skill" objid="67807"></gw2object>
+	<gw2object type="skill" objid="67812"></gw2object>
+	<gw2object type="skill" objid="67817"></gw2object>
+	<gw2object type="skill" objid="67818"></gw2object>
+	<gw2object type="skill" objid="63066"></gw2object>
+	<gw2object type="skill" objid="63067"></gw2object>
+	<gw2object type="skill" objid="63128"></gw2object>
+	<gw2object type="skill" objid="63134"></gw2object>
+	<gw2object type="skill" objid="63154"></gw2object>
+	<gw2object type="skill" objid="63181"></gw2object>
+	<gw2object type="skill" objid="63182"></gw2object>
+	<gw2object type="skill" objid="63254"></gw2object>
+	<gw2object type="skill" objid="63267"></gw2object>
+	<gw2object type="skill" objid="63314"></gw2object>
+	<gw2object type="skill" objid="63351"></gw2object>
+	<gw2object type="skill" objid="62514"></gw2object>
+	<gw2object type="skill" objid="68075"></gw2object>
+	<gw2object type="skill" objid="62530"></gw2object>
+	<gw2object type="skill" objid="62539"></gw2object>
+	<gw2object type="skill" objid="68081"></gw2object>
+	<gw2object type="skill" objid="68090"></gw2object>
+	<gw2object type="skill" objid="62574"></gw2object>
+	<gw2object type="skill" objid="63448"></gw2object>
+	<gw2object type="skill" objid="68105"></gw2object>
+	<gw2object type="skill" objid="68113"></gw2object>
+	<gw2object type="skill" objid="62646"></gw2object>
+	<gw2object type="skill" objid="62655"></gw2object>
+	<gw2object type="skill" objid="62662"></gw2object>
+	<gw2object type="skill" objid="62667"></gw2object>
+	<gw2object type="skill" objid="62672"></gw2object>
+	<gw2object type="skill" objid="68132"></gw2object>
+	<gw2object type="skill" objid="69173"></gw2object>
+	<p>split skills</p>
 </body>
 </html>
