--- a/test/Condition Specter Build (PvP) - Hardstuck.htm
+++ b/test/Condition Specter Build (PvP) - Hardstuck.htm
@@ -139,8 +139,36 @@
 <gw2object class="gw2-build-item noembed auto-transform skeleton" objid="13026" type="skill"></gw2object>
 <gw2object class="gw2-build-item noembed auto-transform skeleton" objid="63323" type="skill"></gw2object>
 <gw2object class="gw2-build-item noembed auto-transform skeleton" objid="63275" type="skill"></gw2object>
-</div> </div>
 </div>
+</div>
+</div>
+</div>
+<div class="horizontal-scroll-item item stats">
+	<h3 class="section-heading">Target Stats</h3>
+	<div class="gw2-attributes">
+		<div>
+			<gw2object class="gw2objectembed" type="attribute" objid="Power"><img src="https://assets.gw2dat.com/66722.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="Toughness"><img src="https://assets.gw2dat.com/104162.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="Vitality"><img src="https://assets.gw2dat.com/104163.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="Precision"><img src="https://assets.gw2dat.com/156609.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="Ferocity"><img src="https://assets.gw2dat.com/156602.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="ConditionDamage"><img src="https://assets.gw2dat.com/156600.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="Expertise"><img src="https://assets.gw2dat.com/156601.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="Concentration"><img src="https://assets.gw2dat.com/156599.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="AgonyResistance"><img src="https://assets.gw2dat.com/536049.png" alt=""><span>0</span></gw2object>
+		</div>
+		<div>
+			<gw2object class="gw2objectembed" type="attribute" objid="Profession"><img src="" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="Armor"><img src="https://assets.gw2dat.com/536048.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="Health"><img src="https://assets.gw2dat.com/536052.png" alt=""><span>15922</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="CritChance"><img src="https://assets.gw2dat.com/536051.png" alt=""><span>5%</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="CritDamage"><img src="https://assets.gw2dat.com/784327.png" alt=""><span>150%</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="HealingPower"><img src="https://assets.gw2dat.com/156606.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="ConditionDuration"><img src="https://assets.gw2dat.com/156601.png" alt=""><span>0%</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="BoonDuration"><img src="https://assets.gw2dat.com/156599.png" alt=""><span>0%</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" objid="MagicFind"><img src="https://assets.gw2dat.com/536054.png" alt=""><span>0%</span></gw2object>
+		</div>
+	</div>
 </div>
 </div>
 </div> 
@@ -171,10 +199,13 @@
 <p>Specter is the best roamer when it comes to dueling, no other roamer should be able to match you and 1v1 you. The one exception is <a href="/gw2/builds/mesmer/interrupt-mirage/">Interrupt Mirage</a>, as it deals very easily with your pressure and can interrupt all your wells because of how telegraphed they are.</p>
 </div>
 </div> </div>
-<script type="c7a3b0364d6482eea7fc7da2-text/javascript">
+<script>
 					var GW2TooltipsContext = [
 						{
 							gameMode: 'Pvp',
+							character: {
+								profession: 'Thief'
+							}
 						},
 					];
 				</script>
