--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -36,9 +36,6 @@
 	<p>This should display all buffs and not loose its duration increase with the trait.</p>
 	<p>Loosing the duration might actually be a bug in game.</p>
 
-	<gw2object objid="69389" type="skill"></gw2object>
-	<p>gw2assets doesn't have an icon for this one?</p>
-
 	<gw2object objid="14518" type="skill" with-traits="1453"></gw2object>
 	<p>Demonstrates how multiple modifiers can be added together if they do not overwrite each other. There should not be multiples of any fact.</p>
 
@@ -87,7 +84,7 @@
 	<p>Abilities can have their range hidden.</p>
 
 	<gw2object objid="13015" type="skill"></gw2object>
-	<p>Skills whos activation time is rounded to zero do not have their activation time displayed. This only applies if preferCorrectnessOverExtraInfo is true.</p>
+	<p>Skills whos activation time is rounded to zero do not have their activation time displayed. This only applies if showPreciseAbilityTimings is false.</p>
 
 	<gw2object objid="45773" type="skill"></gw2object>
 	<p>Testing the order of multiple costs.</p>
