--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -254,5 +254,8 @@
 	<gw2object type="skill" objid="68132"></gw2object>
 	<gw2object type="skill" objid="69173"></gw2object>
 	<p>split skills</p>
+
+	<gw2object type="item" objid="16075"></gw2object>
+	<p>PlayerLevel scaling. Item should have 490-520 Power.</p>
 </body>
 </html>
