--- a/test/Heal Scourge Build (Group PvE) - Hardstuck.htm
+++ b/test/Heal Scourge Build (Group PvE) - Hardstuck.htm
@@ -476,6 +476,33 @@
 <gw2object contextSet="1" class="gw2-build-item noembed skeleton" objid="10646" context="149" type="skill"></gw2object>
 </div> </div>
 </div>
+<div class="horizontal-scroll-item item stats">
+	<h3 class="section-heading">Target Stats</h3>
+	<div class="gw2-attributes">
+		<div>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Power"><img src="https://assets.gw2dat.com/66722.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Toughness"><img src="https://assets.gw2dat.com/104162.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Vitality"><img src="https://assets.gw2dat.com/104163.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Precision"><img src="https://assets.gw2dat.com/156609.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Ferocity"><img src="https://assets.gw2dat.com/156602.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="ConditionDamage"><img src="https://assets.gw2dat.com/156600.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Expertise"><img src="https://assets.gw2dat.com/156601.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Concentration"><img src="https://assets.gw2dat.com/156599.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="AgonyResistance"><img src="https://assets.gw2dat.com/536049.png" alt=""><span>0</span></gw2object>
+		</div>
+		<div>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Profession"><img src="" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Armor"><img src="https://assets.gw2dat.com/536048.png" alt=""><span>1000</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="Health"><img src="https://assets.gw2dat.com/536052.png" alt=""><span>15922</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="CritChance"><img src="https://assets.gw2dat.com/536051.png" alt=""><span>5%</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="CritDamage"><img src="https://assets.gw2dat.com/784327.png" alt=""><span>150%</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="HealingPower"><img src="https://assets.gw2dat.com/156606.png" alt=""><span>0</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="ConditionDuration"><img src="https://assets.gw2dat.com/156601.png" alt=""><span>0%</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="BoonDuration"><img src="https://assets.gw2dat.com/156599.png" alt=""><span>0%</span></gw2object>
+			<gw2object class="gw2objectembed" type="attribute" contextSet="1" objid="MagicFind"><img src="https://assets.gw2dat.com/536054.png" alt=""><span>0%</span></gw2object>
+		</div>
+	</div>
+</div>
 </div>
 </div>
 </div> <div class="copy-template" data-label="in-game build template"><i class="icon icon-copy" aria-hidden="true"></i> <span>copied</span><input type="text" value="[&DQgnNhM5PC4SAAAAbwEAAIAAAAB3AQAAlQAAAAAAAAAAAAAAAAAAAAAAAAA=]" readonly aria-label="Copy build template"></div><div class="gw2-build-description-wrapper">
