--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -257,5 +257,8 @@
 
 	<gw2object type="item" objid="16075"></gw2object>
 	<p>PlayerLevel scaling. Item should have 490-520 Power.</p>
+
+	<gw2object type="skill" objid="41220"></gw2object>
+	<p>Hard CC &lt; 1s, should have 100 defiance damage.</p>
 </body>
 </html>
