tests for bonus defiance damage

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -260,5 +260,11 @@
 
 	<gw2object type="skill" objid="41220"></gw2object>
 	<p>Hard CC &lt; 1s, should have 100 defiance damage.</p>
+
+	<gw2object type="skill" objid="10556"></gw2object>
+	<gw2object type="skill" objid="60095"></gw2object>
+	<gw2object type="skill" objid="60743"></gw2object>
+	<gw2object type="skill" objid="63265"></gw2object>
+	<p>Bonus defiance damage. Should be included in summary.</p>
 </body>
 </html>
