some more tests

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -266,5 +266,12 @@
 	<gw2object type="skill" objid="60743"></gw2object>
 	<gw2object type="skill" objid="63265"></gw2object>
 	<p>Bonus defiance damage. Should be included in summary.</p>
+
+	<gw2object type="skill" objid="12466"></gw2object>
+	<gw2object type="skill" objid="31535"></gw2object>
+	<p>Combo finishers; 20% Projectile, Blast.</p>
+
+	<gw2object type="skill" objid="43390" with-traits="1158"></gw2object>
+	<p>Catching special cases of defiance damage. The daze should have defiance attached to it.</p>
 </body>
 </html>
