--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -273,5 +273,10 @@
 
 	<gw2object type="skill" objid="43390" with-traits="1158"></gw2object>
 	<p>Catching special cases of defiance damage. The daze should have defiance attached to it.</p>
+
+	<gw2object type="skill" objid="5506"></gw2object>
+	<gw2object type="skill" objid="5666"></gw2object>
+	<gw2object type="skill" objid="31582"></gw2object>
+	<p>Base Glyphs should show statefull versions</p>
 </body>
 </html>
