--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -277,6 +277,8 @@
 	<gw2object type="skill" objid="5506"></gw2object>
 	<gw2object type="skill" objid="5666"></gw2object>
 	<gw2object type="skill" objid="31582"></gw2object>
+	<gw2object type="skill" objid="31746"></gw2object>
+	<gw2object type="skill" objid="5573"></gw2object>
 	<p>Base Glyphs should show statefull versions</p>
 </body>
 </html>
