changed the behavior of PercentLifeForceAdjust / LifeForceAdjust which seem to represent the split between LF cost / gain on skills. Im not 100% certain about all of this, but it seems to work for now.
closes #62, closes #63

--- a/test/Heal Scourge Build (Group PvE) - Hardstuck.htm
+++ b/test/Heal Scourge Build (Group PvE) - Hardstuck.htm
@@ -11,7 +11,15 @@
 	var GW2TooltipsConfig = {
 		apiImpl: (APIs) => new APIs.FakeAPI(),
 	}
-	var GW2TooltipsContext = [{}, {}] //TODO(Rennorb) @fixme: remove the need to explicitly specify contexts if more than one is used
+	var GW2TooltipsContext = [{
+		character: {
+			profession: 'Necromancer',
+		},
+	}, {
+		character: {
+			profession: 'Necromancer',
+		},
+	}] //TODO(Rennorb) @fixme: remove the need to explicitly specify contexts if more than one is used
 </script>
 
 </head>
