--- a/test/Power Reaper Build (PvP) - Hardstuck.htm
+++ b/test/Power Reaper Build (PvP) - Hardstuck.htm
@@ -12,17 +12,13 @@
 	var GW2TooltipsContext = [{
 		gameMode: 'Pvp',
 		character: {
-			runeCounts: {
-				21175: 6, //TOOD(Rennorb): improve auto collection so this isn't needed
-			}
-		}
+			profession: 'Necromancer',
+		},
 	}, {
 		gameMode: 'Pvp',
 		character: {
-			runeCounts: {
-				21175: 6, //TOOD(Rennorb): improve auto collection so this isn't needed
-			}
-		}
+			profession: 'Necromancer',
+		},
 	}]
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
